<resources>
    <string name="app_name">SharedPreferences</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_mobile">Mobile</string>
    <string name="save_pref">Save Preferences</string>
    <string name="clear">Clear</string>
</resources>
